crates/evm-coder/tests/build_failed/abi_derive_enum_generation.stderr
error: Enum is not "repr(u8)"
 --> tests/build_failed/abi_derive_enum_generation.rs:4:6
  |
4 | enum NonRepr {
  |      ^^^^^^^

error: Enum is not "repr(u8)"
  --> tests/build_failed/abi_derive_enum_generation.rs:12:6
   |
12 | enum NonReprU8 {
   |      ^^^^^^^^^

error: Enumeration parameters should not have fields
  --> tests/build_failed/abi_derive_enum_generation.rs:21:2
   |
21 |     A(u128),
   |     ^

error: Enumeration options should not have an explicit specified value
  --> tests/build_failed/abi_derive_enum_generation.rs:29:2
   |
29 |     A = 128,
   |     ^
